# Shmup

./: .gitignore  CMakeLists.txt  README.md
Gng2D/: CMakeLists.txt
Gng2D/source/components/: CMakeLists.txt
Gng2D/source/components/inc/Gng2D/components/: box.hpp  colider.hpp  layer.hpp  mouse_controlls.hpp  name_tag.hpp  position.hpp  relationship.hpp  selection_list.hpp  text.hpp
Gng2D/source/components/src/: box.cpp  text.cpp
Gng2D/source/core/inc/Gng2D/core/: application.hpp  log.hpp
Gng2D/source/core/src/: application.cpp
Gng2D/source/scene/: CMakeLists.txt
Gng2D/source/scene/inc/Gng2D/scene/: animaton_system.hpp  entity_renderer.hpp  mouse_system.hpp  position_system.hpp  scene.hpp
Gng2D/source/scene/src/: animation_system.cpp  entity_renderer.cpp  gui_system.cpp  mouse_system.cpp  scene.cpp
Gng2D/source/systems/: CMakeLists.txt
Gng2D/source/systems/inc/Gng2D/systems/: collider_renderer.hpp  overlap_system.hpp
Gng2D/source/types/: CMakeLists.txt
Gng2D/source/types/inc/Gng2D/types/: entity_compositor.hpp  menu_builder.hpp  menu_handle.hpp  v2d.hpp
Gng2D/source/types/src/: coroutine.cpp  font.cpp  menu_builder.cpp  menu_handle.cpp
components/: CMakeLists.txt
components/inc/Gng2D/components/: animation.hpp  layer.hpp  position.hpp  (+4 more)
components/src/: sprite.cpp  text.cpp  text_sprite.cpp
core/: CMakeLists.txt
core/src/: application.cpp  asset_registry.cpp  scene_registry.cpp
gui/: CMakeLists.txt
gui/src/: box.cpp  icon.cpp  text_animations.cpp
lib/Gng2D/: CMakeLists.txt
lib/Gng2D/cmake/: FindSDL2_image.cmake
lib/Gng2D/components/: CMakeLists.txt
lib/Gng2D/components/inc/Gng2D/components/: acceleration.hpp  circle_colider.hpp  game_object.hpp  position.hpp  scene.hpp  sprite.hpp  tag.hpp  v2d.hpp  velocity.hpp
lib/Gng2D/components/src/: game_object.cpp  scene.cpp  sprite.cpp
lib/Gng2D/core/: CMakeLists.txt
lib/Gng2D/core/inc/Gng2D/core/: application.hpp  asset_registry.hpp  functions.hpp  render_system.hpp  scene_controller.hpp  scene_registry.hpp  settings.hpp  window.hpp
lib/Gng2D/core/src/: application.cpp  asset_registry.cpp  functions.cpp  render_system.cpp  scene_controller.cpp  scene_registry.cpp  window.cpp
lib/Gng2D/gui/: CMakeLists.txt
lib/Gng2D/gui/inc/Gng2D/gui/: box.hpp  element.hpp  text.hpp  text_animations.hpp
lib/Gng2D/gui/src/: box.cpp  element.cpp  icon.cpp  text.cpp  text_animations.cpp
lib/Gng2D/internal/: CMakeLists.txt
lib/Gng2D/internal/inc/Gng2D/internal/: asset_registry.hpp  window.hpp
lib/Gng2D/internal/src/: asset_registry.cpp  window.cpp
lib/Gng2D/systems/: CMakeLists.txt
lib/Gng2D/systems/inc/Gng2D/systems/: collider_renderer_system.hpp  collision_system.hpp  entity_renderer.hpp  movement_system.hpp  overlap_system.hpp  scene_control.hpp  seq_control.hpp
lib/Gng2D/systems/src/: entity_renderer.cpp  movement_system.cpp  scene_control.cpp  seq_control.cpp
lib/Gng2D/systems/tst/: collision_system_tests.cpp  overlap_system_tests.cpp
lib/Gng2D/types/: CMakeLists.txt
lib/Gng2D/types/inc/Gng2D/types/: coroutine.hpp  font.hpp  game_object.hpp  scene.hpp  v2d.hpp
lib/Gng2D/types/src/: coroutine.cpp  font.cpp  game_object.cpp  scene.cpp
lib/Gng2D/types/tst/: coroutine_tests.cpp
sandbox/: CMakeLists.txt  main.cpp  sandbox
source/: CMakeLists.txt  shmup.cpp
source/components/src/: box.cpp  sprite.cpp  text.cpp
source/core/: CMakeLists.txt
source/core/src/: application.cpp  asset_registry.cpp  window.cpp
source/inc/: animations.hpp  bullet.hpp  bullet_bullet_collision_system.hpp  flight_scene.hpp  flight_scene_layers.hpp  game_over_scene.hpp  levels.hpp  main_menu_scene.hpp  player_bullet_collision_system.hpp  player_ship.hpp  shmup.hpp  sprite_sheets.hpp
source/inc/components/: basic_weapon.hpp  colliders.hpp  destroy.hpp  destroy_after.hpp  destroyed_by_player.hpp  enemy_animation.hpp  enemy_basic_weapon.hpp  enemy_ship_collider.hpp  enemy_targeting_turret.hpp  enemy_weapon_types.hpp  flashing_enemy.hpp  hit_points.hpp  invulnerability.hpp  pickup.hpp  player_controllable.hpp  stats.hpp  timed_existence.hpp
source/inc/entities/: bullet.hpp  player_ship.hpp  red_x.hpp  sparrow.hpp
source/inc/levels/: level_1.hpp
source/inc/systems/: animations_system.hpp  bullet_bullet_collision.hpp  bullet_enemy_collision.hpp  collision_system.hpp  enemy_bullet_spawner.hpp  enemy_weapons.hpp  entity_cleaner.hpp  entity_factory.hpp  flight_scene_gui.hpp  focus_mode_text_renderer.hpp  player_bullet_collision.hpp  player_controlls.hpp  player_enemy_collision.hpp  player_weapons.hpp
source/scene/: CMakeLists.txt
source/scene/src/: animation_system.cpp  entity_renderer.cpp  gui_system.cpp  mouse_system.cpp  position_system.cpp  scene.cpp
source/src/: animations.cpp  bullet_bullet_collision_system.cpp  flight_scene.cpp  game_over_scene.cpp  levels.cpp  main.cpp  main_menu_scene.cpp  player_bullet_collision_system.cpp  player_ship.cpp  shmup.cpp
source/src/components/: enemy_animation.cpp
source/src/systems/: animations_system.cpp  bullet_bullet_collision.cpp  bullet_enemy_collision.cpp  collision_system.cpp  enemy_bullet_spawner.cpp  enemy_weapons.cpp  entity_cleaner.cpp  entity_factory.cpp  flight_scene_gui.cpp  focus_mode_text_renderer.cpp  player_bullet_collision.cpp  player_controlls.cpp  player_enemy_collision.cpp  player_weapons.cpp
source/systems/: CMakeLists.txt
source/systems/src/: animation_system.cpp  gui_factory.cpp  gui_system.cpp  position_system.cpp
source/systems/tst/: overlap_system_tests.cpp
source/types/: CMakeLists.txt
source/types/src/: entity_compositor.cpp  menu_builder.cpp  scene.cpp
src/: main.cpp  shmup_setup.cpp  test_scene.cpp  test_scene.hpp
src/core/: event_manager.cpp  event_manager.hpp  game.cpp  game.hpp  log.hpp  main.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  util.hpp  window.cpp  window.hpp
systems/: CMakeLists.txt
systems/src/: entity_renderer.cpp  gui_factory.cpp  gui_system.cpp  movement_system.cpp  position_system.cpp
types/: CMakeLists.txt
types/src/: entity_builder.cpp  game_object.cpp  scene.cpp
(+36 files in other folders)
